updated: email backend

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,11 @@ ADMIN_PASS=!!Bird123
 
 # Email (not used; mailto is client-side)
 # MAIL_TO=contact@haughtonventures.com
+EMAIL_PROVIDER=smtp
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=465
+SMTP_SECURE=true
+SMTP_USER=rechceltoledo@gmail.com
+SMTP_PASS=ljcd mzbe rgpn rmam
+MAIL_FROM="Garage Gators info@garagegators.com"
+MAIL_TO=rechceltoledo@gmail.com
